--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
      </div> 
     </div>
     <div class="footer">
-        <a href="https://www.instagram.com/G_Sanjay1/" target="_blank"><img src="./resources/insta.jpeg" alt="instagram image"></a>
-        <a href="https://www.linkedin.com/in/sanjay-bista-34680a267/" target="_blank"><img src="./resources/linkedin.png" alt="linkedin image"></a>
-        <a href="https://github.com/SanjaySamaa" target="_blank"><img src="./resources/github.jpg" alt="github image"></a>
+        <a href="https://www.instagram.com/G_Sanjay1/" target="_blank"><img src="./resources/instagram.svg" alt="instagram image"></a>
+        <a href="https://www.linkedin.com/in/sanjay-bista-34680a267/" target="_blank"><img src="./resources/linkedin.svg" alt="linkedin image"></a>
+        <a href="https://github.com/SanjaySamaa" target="_blank"><img src="./resources/github.svg" alt="github image"></a>
         <p class="copywrite">&copy; Sanjay Bista</p>
     </div>
     
